[gd_scene load_steps=9 format=1]

[ext_resource path="res://game/scenes/Enemy.gd" type="Script" id=1]
[ext_resource path="res://assets/sheet.ufoGreen.atex" type="Texture" id=2]
[ext_resource path="res://game/scenes/enemy_paths.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/laser1.wav" type="Sample" id=4]

[sub_resource type="CircleShape2D" id=1]

custom_solver_bias = 0.0
radius = 27.0194

[sub_resource type="Animation" id=4]

resource/name = "hit"
length = 0.25
loop = false
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0.04, 0.08, 0.12, 0.16, 0.2, 0.24 ),
"transitions": FloatArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.976562, 0, 0, 1 ), Color( 0.832031, 0.832031, 0.832031, 1 ), Color( 0.976562, 0, 0, 1 ), Color( 0.832031, 0.832031, 0.832031, 1 ), Color( 0.976562, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=2]

resource/name = "rotate"
length = 1.0
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:transform/rot")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.5, 1 ),
"transitions": FloatArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 180.0, 360.0 ]
}

[sub_resource type="SampleLibrary" id=3]

samples/laser1 = {
"db": 0.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 4 )
}

[node name="Enemy" type="Area2D"]

input/pickable = true
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
script/script = ExtResource( 1 )

[node name="particle" type="Particles2D" parent="."]

transform/scale = Vector2( 1.4, 1.4 )
config/amount = 32
config/lifetime = 2.0
config/process_mode = 1
params/direction = 0.0
params/spread = 180.0
params/linear_velocity = 20.0
params/spin_velocity = 0.0
params/orbit_velocity = 0.0
params/gravity_direction = 0.0
params/gravity_strength = 0.0
params/radial_accel = 0.0
params/tangential_accel = 0.0
params/damping = 0.0
params/initial_angle = 0.0
params/initial_size = 1.0
params/final_size = 1.0
params/hue_variation = 0.0
params/anim_speed_scale = 1.0
params/anim_initial_pos = 0.0
randomness/direction = 0.36
randomness/spread = 0.25
randomness/linear_velocity = 0.53
randomness/initial_size = 1.0
color/color = Color( 0.129303, 0.871094, 0, 1 )

[node name="Sprite" type="Sprite" parent="."]

transform/scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 2 )

[node name="Collision" type="CollisionShape2D" parent="."]

shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="Anim" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/hit = SubResource( 4 )
anims/rotate = SubResource( 2 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = "rotate"

[node name="enemy_paths" parent="." instance=ExtResource( 3 )]

[node name="visible" type="VisibilityNotifier2D" parent="."]

rect = Rect2( -10, -10, 20, 20 )

[node name="bullet_container" type="Node" parent="."]

[node name="shoot_timer" type="Timer" parent="."]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false

[node name="shoot" type="SamplePlayer" parent="."]

config/polyphony = 1
config/samples = SubResource( 3 )
default/volume_db = 0.0
default/pitch_scale = 1.0
default/pan = 0.0
default/depth = 0.0
default/height = 0.0
default/filter/type = 0
default/filter/cutoff = 5000.0
default/filter/resonance = 1.0
default/filter/gain = 1.0
default/reverb_room = 2
default/reverb_send = 0.0
default/chorus_send = 0.0

[connection signal="exit_screen" from="visible" to="." method="_on_visible_exit_screen"]

[connection signal="timeout" from="shoot_timer" to="." method="_on_shoot_timer_timeout"]


